<resources>
    <string name="app_name">StoryBook</string>

    <string name="story_screen_title">My Stories</string>
    <string name="new_story">New Title</string>
    <string name="story_title_1">Mary Had A Little Lamb</string>
    <string name="story_title_2">Harry Potter</string>
    <string name="story_title_3">The Shining</string>
    <string name="story_title_4">Message In A Bottle</string>

    <string name="new_title_edit">New Title</string>
    <string name="brief_synopsis">Brief Synopsis</string>
    <string name="select_genre">Select Genre</string>
    <string name="comedy">Comedy</string>
    <string name="drama">Drama</string>
    <string name="romance">Romance</string>
    <string name="action">Action</string>
    <string name="bio">Bio</string>
    <string name="horror">Horror</string>
    <string name="mystery">Mystery</string>
    <string name="history">History</string>
    <string name="fantasy">Fantasy</string>
    <string name="scifi">Sci-Fi</string>
    <string name="thriller">Thriller</string>

    <string name="other_info">Other Info</string>
    <string name="age_range">Age Range</string>
    <string name="age_children">Children</string>
    <string name="age_young_adult">Young Adult</string>
    <string name="age_adult">Adult</string>
    <string name="classification_text">Classification</string>
    <string name="classification_fiction">Fiction</string>
    <string name="classification_non_fiction">Non-Fiction</string>
    <string name="save_and_continue_text">SAVE AND CONTINUE</string>
    <string name="action_settings">Settings</string>

    <string name="preference_file_key">WR_PREFERENCE_KEY</string>
    <string name="first_time_key">true</string>

    <!-- For char_fragment_one      - Blake Martin -->
    <string name="character_name_input">Name of Character</string>
    <string name="basic_info">Basic Info</string>
    <string name="direction">Direction</string>
    <string name="protagonist">Protagonist</string>
    <string name="antagonist">Antagonist</string>
    <string name="other">Other</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age</string>
    <string name="location">Location</string>
    <string name="occupation">Occupation</string>
    <string name="income">Income</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="physical_features">Physical Features</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="eye_color">Eye Color</string>
    <string name="hair_color">Hair Color</string>
    <string name="nationality">Nationality</string>

    <!-- For char_fragment_two      - Blake Martin -->
    <string name="title_char_page_two">Personality</string>
    <string name="pair_one_one">Hardworking</string>
    <string name="pair_one_two">Lazy</string>
    <string name="pair_two_one">Happy</string>
    <string name="pair_two_two">Sad</string>
    <string name="pair_three_one">Smart</string>
    <string name="pair_three_two">Dumb</string>
    <string name="pair_four_one">Polite</string>
    <string name="pair_four_two">Rude</string>
    <string name="pair_five_one">Selfish</string>
    <string name="pair_five_two">Thoughtful</string>
    <string name="pair_six_one">Quiet</string>
    <string name="pair_six_two">Noisy</string>
    <string name="pair_seven_one">Brave</string>
    <string name="pair_seven_two">Afraid</string>
    <string name="pair_eight_one">Calm</string>
    <string name="pair_eight_two">Nervous</string>

    <!-- For char_fragment three    - Blake Martin -->
    <string name="title_char_page_three">Interests</string>
    <string name="page_three_item_1">Sports</string>
    <string name="page_three_item_2">Yoga</string>
    <string name="page_three_item_3">Running</string>
    <string name="page_three_item_4">Music</string>
    <string name="page_three_item_5">Writing</string>
    <string name="page_three_item_6">Reading</string>
    <string name="page_three_item_7">Photography</string>
    <string name="page_three_item_8">Art</string>
    <string name="page_three_item_9">Food</string>
    <string name="page_three_item_10">Relaxing</string>
    <string name="page_three_item_11">Camping</string>
    <string name="page_three_item_12">Hiking</string>
    <string name="page_three_item_13">Traveling</string>
    <string name="page_three_item_14">Dancing</string>
    <string name="page_three_item_15">Cooking</string>
    <string name="page_three_item_16">Baking</string>
    <string name="page_three_item_17">Crafts</string>
    <string name="page_three_item_18">Gardening</string>
    <string name="page_three_item_19">Hunting</string>
    <string name="page_three_item_20">Learning</string>
    <string name="page_three_item_21">Socializing</string>
    <string name="page_three_item_22">Sleeping</string>
    <string name="page_three_item_23">Cars</string>
    <string name="page_three_item_24">Swimming</string>
    <string name="page_three_item_25">Gaming</string>
    <string name="title_activity_character">CharacterActivity</string>

</resources>